# BEGAUTOS_DJANGO-NEXT

backend/: .env  .gitignore  TODO.txt  main.py  pyproject.toml  requirements.txt  serviceAccountKey.json
backend/apis/: urls.py
backend/app_libs/: logger_config.py
backend/apps/home/: admin.py  apps.py  serializers.py  urls.py  views.py
backend/apps/home/migrations/: 0001_initial.py  0002_delete_brand.py  0003_remove_socialmedia_image_socialmedia_url.py  0004_remove_socialmedia_name_remove_socialmedia_url_and_more.py  0005_peopletalkaboutus.py  0006_alter_peopletalkaboutus_title.py  0007_peopletalkaboutus_is_featured.py  0008_peopletalkaboutus_created_at_and_more.py  0009_sellyourcarimages.py  0010_alter_sellcar_image.py  0011_alter_slider_options_alter_slider_image_and_more.py  0012_remove_sellcar_image.py  0013_subscriber.py  0014_alter_peopletalkaboutus_options_and_more.py  0015_sellcar_offered_price.py  0016_salesrepresentative.py  0017_alter_salesrepresentative_options.py  0018_alter_salesrepresentative_phone_number.py
backend/apps/home/models/: __init__.py  people_talk_model.py  sales_representative.py  sell_car_model.py  sell_your_cars_image_model.py  slider_model.py  socialmedia_model.py  subscribers_model.py
backend/apps/inventory/: admin.py  apps.py  filters.py  serializers.py  urls.py  views.py
backend/apps/inventory/migrations/: 0001_initial.py  (+14 more)
backend/backup/: db_begautos.sql
backend/base/: models.py
backend/core/: urls.py
backend/core/mixins/: image_optimization_mixins.py  image_validation.py
backend/core/settings/: base.py  dev.py
(+19 files in other folders)
